--- a/css/estilo.css
+++ b/css/estilo.css
@@ -18,15 +18,22 @@ h1,h2,h3,h4,h5,h6{
    width: 100%;
    margin:0 auto;
 }
-#menu li{
-   display:inline;
+#topo h1{
+   padding: 20px 0;
 }
 #topo h2{
    display: none;
 }
+#menu li{
+   display:inline;
+}
 #menu ul{
    width: 80%;
    margin: 0 auto;
+   padding-bottom: 20px;
+}
+.destaques h2{
+   text-align: center;
 }
 .destaques li{
    width: 100%;
@@ -84,6 +91,9 @@ button{
    -moz-border-radius: 5px;
    border-radius: 5px;
 }
+img{
+   width: 60%;
+}
 #rodape{
    width: 100%;
    background-color: #333;
@@ -91,6 +101,25 @@ button{
    float: left;
    text-align: center;
 }
-#rodape li {display: inline;
+#rotape ul{
+   padding: 20px 0;
+}
+#rodape li {
+   display: inline;
 }
 
+/***********************Media Query********************/
+@media (min-width: 576px){
+   #topo h2{
+      display: block;
+      font-size: 1.2em;
+      padding: 20px;
+   }
+   .destaques li{
+      width: 50%;
+      float: left;
+      text-align: center;
+      list-style: none;
+      padding: 20px 0;
+   }
+}
