--- a/css/estilo.css
+++ b/css/estilo.css
@@ -137,6 +137,58 @@ img{
       clear: left;
    }
    #rotape{
-      width: 1005;
+      width: 100%;
    }
+
+   /***********************Media Query********************/
+@media (min-width: 768px){
+   #topo h1{
+      font-size: 3em;
+   }
+   #topo h2{
+      display: block;
+      font-size: 1.5em;
+      padding: 20px;
+   }
+   .destaques li{
+      width: 50%;
+      float: left;
+      text-align: center;
+      list-style: none;
+      padding: 20px 0;
+   }
+   #menu ul{
+      width: 90%;
+      margin: 0 auto;
+      padding-bottom: 20px;
+   }
+   #menu li{
+      font-size: 1em;
+      padding-left: 1%;
+      padding-right: 1%;
+   }
+   section{
+      margin-left: 20%;
+      padding: 2%;
+      width: 100%;
+   }
+   legend{
+      margin-left: -20%;
+   }
+   div{
+      width: 100%;
+   }
+   .m{
+      clear: left;
+   }
+   form div{
+      width: 70%;
+      margin: 0 1%;
+      height: 180px;
+      float: left;
+   }
+   #rotape{
+      width: 100%;
+   }
+}
 }
